# drl_env

./: .gitignore  LICENSE  README.md
src/PhysxDemo/: CMakeLists.txt  PhysXServerCommandProcessor.cpp  PhysxDemoMain.cpp
src/SAC/: main.py  model.py  replay_memory.py  sac.py
src/Train/: Todo  ant_setup  ant_setup.p  laikago_stand.ipynb  laikago_stand.py  laikago_stand_main.py  laikago_stand_pl.py  laikago_stand_pl_rlkit.py  laikago_stand_pl_rlkit_one.py  laikago_stand_rlkit.py  laikago_stand_rlkit_batchMdp.py  laikago_stand_rlkit_batchMdp_5.py  laikago_stand_spinup.py  mujoco_single.py  parallel_benchmark.py  policy.chkp
src/b3px_gym/b3px_env/: __init__.py  env_bases.py
src/b3px_gym/b3px_env/examples/: anymal_cfg.py  base_cfg.py  laikago_0628.mov  laikago_b3px_simple_env.py
src/b3px_gym/b3px_env/parallel/: anymal_pl.py  laikago_gym_env_gpu.py  laikago_gym_env_pl.py  laikago_pl.py  parallel_env.py  parallel_env_anymal.py  parallel_env_mujoco.py  util.py
src/b3px_gym/b3px_env/singleton/: anymal_fall_poses.py  anymal_yu_version.py  cartpole.py  checklist  laikago.py  laikago_gym_env.py  list of envs
src/b3px_gym/b3px_env/singleton/valkyrie_gym_env/: .gitignore  PD_controller.py  __init__.bkp.py  __init__.py  complex_bkp.xml  sensor_signal_process.py  valk_old.py  valkyrie.urdf  valkyrie_fixed.urdf  valkyrie_full_dof.urdf  valkyrie_model_based.py  valkyrie_physx.py  valkyrie_reduced.urdf  valkyrie_reduced_fixed.urdf
src/b3px_gym/b3px_env/singleton/valkyrie_gym_env/plane/: plane.urdf
src/b3px_gym/b3px_env/singleton_pybullet/: laikago.py  laikago_env_randomizer.py  laikago_gym_env.py  laikago_pybullet.py
src/distWrapper/: dist_pb2_grpc.py  grpcClient.py  grpcServer.py
src/distributed_train/: anymal_server.sh  anymal_stand_server.py  anymal_start_server.sh  batch_test.py  benchmark_mujoco.sh  benchmark_rtf.sh  env_server.py  gpu_benchmark.sh  laikago_stand_batch.py  laikago_stand_client.py  laikago_stand_client_async.py  laikago_stand_client_async_batch.py  laikago_stand_server.py  loadProgress.py  load_weights.py  loop.sh  mujoco_parallel_batch.py  parallel_batch.py  robot.json  run_policy.py  run_spinup.py  spinup_ppo.py  start_client.sh  start_env_server.sh  start_env_servers.sh  start_loop.sh  start_server.sh  start_server2.sh  start_stop_test.sh  stop_server.sh  stop_server2.sh  train_all.py
src/proto/: createProtobufs.sh  dist.proto  dist_pb2.py  dist_pb2_grpc.py  walle.proto
src/pybullet_demo/: URDFAnymalGen.py  anymal_bak.py  anymal_control.py  arm_control.py  bench_control.py  laikago.py  otherPhysicsEngine.py  rst.txt  visulize.py
src/pybullet_demo/.ropeproject/: config.py  globalnames
src/pybullet_demo/bench/: bullet.txt  cpu.txt  gpu.txt  laikago_bullet.py  laikago_physx_cpu.py  laikago_physx_gpu.py  profile.json
src/pybullet_demo/data/: efficent.table
src/pybullet_demo/efficient/: 1.txt  profile.json
src/pybullet_demo/profile/: profile_ana.py
src/rlkit/core/: eval_util.py  logging.py  online_rl_algorithm.py  rl_algorithm.py
src/rlkit/data_management/: replay_buffer.py
src/rlkit/launchers/: launcher_util.py
src/rlkit/samplers/: rollout_functions.py
src/rlkit/samplers/data_collector/: __init__.py  path_collector.py  step_collector.py
src/rlkit/torch/sac/: sac.py
src/spinup/: __init__.py
src/spinup/algos/pytorch/ppo/: core.py  ppo.py
src/spinup/utils/: logx.py
src/tools/: bench.pkl  env_test.py  gpu_test.py  gravity.py  numba_test.py  sac_vis.py  seed_test.py  simple_load_urdf.py  sphere_small.urdf  tau_plot.py  tfmlp.py
src/urdf/: todo
src/urdf/anymal_bedi_urdf/: anymal.urdf  anymal_complex_mesh.urdf  anymal_fixed_base.urdf  anymal_half.urdf  anymal_original.urdf  anymal_simple_shapes_without_top.urdf  anymal_with_protection.urdf
src/urdf/anymal_bedi_urdf/adapter/3_0/: anymal_adapter_macro.urdf.xacro
src/urdf/anymal_bedi_urdf/base/2_0_a/: anymal_base_macro.urdf.xacro  anymal_base_parameters.urdf.xacro
src/urdf/anymal_bedi_urdf/base/2_0_b/: anymal_base.scad  anymal_base_macro.urdf.xacro
src/urdf/anymal_bedi_urdf/hip/2_0/: anymal_hip_macro.urdf.xacro
src/urdf/anymal_bedi_urdf/hip/3_0/: anymal_hip_macro.urdf.xacro
src/urdf/anymal_bedi_urdf/modules/omniview/: anymal_omniview_macro.urdf.xacro
src/urdf/anymal_bedi_urdf/modules/piksi/: anymal_piksi.urdf.xacro
src/urdf/anymal_bedi_urdf/modules/realsense/: anymal_realsense.urdf.xacro
src/urdf/anymal_bedi_urdf/modules/velodyne/: anymal_velodyne.urdf.xacro
src/urdf/anymal_bedi_urdf/shank/2_0/: anymal_shank_macro.urdf.xacro  anymal_shank_parameters.urdf.xacro
src/urdf/anymal_bedi_urdf/shank/3_0/: anymal_shank_macro.urdf.xacro  anymal_shank_parameters.urdf.xacro
src/urdf/anymal_bedi_urdf/thigh/2_0/: anymal_thigh_macro.urdf.xacro  anymal_thigh_parameters.urdf.xacro
src/urdf/franka_model/: arm.urdf
src/urdf/laikago/: laikago.urdf  laikago1.urdf
src/urdf/laikago_description/: laikago.srdf  laikago.urdf  laikago_foot.urdf  laikago_foot.urdf_bak  laikago_gpu.urdf
src/urdf/laikago_description/base/2_0_b/: anymal_base_parameters.urdf.xacro
src/urdf/laikago_description/foot/6_0/: anymal_foot_macro.urdf.xacro
src/urdf/laikago_description/foot/8_0/: anymal_foot_macro.urdf.xacro
src/urdf/laikago_description/foot/9_0/: anymal_foot_macro.urdf.xacro
src/urdf/laikago_description/hip/2_0/: anymal_hip_parameters.urdf.xacro
src/urdf/laikago_description/hip/3_0/: anymal_hip_parameters.urdf.xacro
src/urdf/laikago_description/include/: anymal_plugin.gazebo.xacro
src/urdf/laikago_description/modules/realsense/: anymal_realsense_d435.dae  anymal_realsense_mount_2.dae
src/urdf/laikago_description/thigh/3_0/: anymal_thigh_macro.urdf.xacro  anymal_thigh_parameters.urdf.xacro
src/urdf/plane/: plane100.urdf
tool/: Dockerfile  get_protobuf.sh  walle_bench.yml
